[gd_scene load_steps=7 format=2]

[ext_resource path="res://Bar.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/bar/new-hp/bgd.png" type="Texture" id=2]
[ext_resource path="res://assets/interfaces/bar/new-hp/green.png" type="Texture" id=3]
[ext_resource path="res://assets/interfaces/bar/new-hp/foreground.png" type="Texture" id=4]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="Bar" type="Control"]
margin_right = 1.0
margin_bottom = 39.0
script = ExtResource( 1 )
backgroundTexture = ExtResource( 2 )
hpTexture = ExtResource( 3 )
hpLossTexture = ExtResource( 3 )
hpForegroundTexture = ExtResource( 4 )

[node name="hpbar1" type="Node2D" parent="."]
position = Vector2( -5, 15 )
z_index = -1

[node name="hpLossTextureProgress" type="TextureProgress" parent="hpbar1"]
margin_right = 962.0
margin_bottom = 39.0
rect_scale = Vector2( 0.6, 0.75 )
min_value = 1.0
max_value = 5.0
step = 0.05
value = 1.0
tint_progress = Color( 0, 0, 1, 1 )

[node name="hpTextureProgress" type="TextureProgress" parent="hpbar1"]
margin_right = 962.0
margin_bottom = 39.0
rect_scale = Vector2( 0.6, 0.75 )
min_value = 1.0
max_value = 5.0
step = 0.05
value = 1.0
tint_progress = Color( 0, 1, 0, 1 )

[node name="hpbar2" type="Node2D" parent="."]
z_index = -2

[node name="hpLossTextureProgress2" type="TextureProgress" parent="hpbar2"]
margin_right = 962.0
margin_bottom = 39.0
rect_scale = Vector2( 0.6, 0.75 )
min_value = 1.0
max_value = 5.0
step = 0.05
value = 1.0
tint_progress = Color( 0, 0, 1, 1 )

[node name="hpTextureProgress2" type="TextureProgress" parent="hpbar2"]
margin_right = 962.0
margin_bottom = 39.0
rect_scale = Vector2( 0.6, 0.75 )
min_value = 1.0
max_value = 5.0
step = 0.05
value = 1.0
tint_progress = Color( 0, 1, 0, 1 )

[node name="hpLabel" type="Label" parent="."]
margin_left = 275.429
margin_top = 9.0
margin_right = 468.432
margin_bottom = 51.0001
rect_scale = Vector2( 0.6, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "hp value"
